--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "type": "git",
         "url": "git://github.com/happen-zhang/cakes.git"
     },
+    "dependencies": {
+        "lodash": "2.4.1"
+    },
     "devDependencies": {
         "chai": "1.9.0",
         "mocha": "1.17.1",
