--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
         "url": "git://github.com/happen-zhang/cakes.git"
     },
     "dependencies": {
-        "lodash": "2.4.1"
+        "mysql": "2.4.2",
+        "when": "3.4.4",
+        "lodash": "2.4.1",
+        "cakes": "1.0.1"
     },
     "devDependencies": {
         "chai": "1.9.0",
